# wogger-pro

./: .gitignore  README.md  pyi_force_schannel.py  pyi_ssl_preload.py  pyproject.toml  qt.conf  wogger_pro.spec
.github/workflows/: build-release.yml
src/wogger_pro/: __init__.py  __main__.py  _build_info.py  app.py  app_controller.py
src/wogger_pro/core/: __init__.py  backup.py  categories.py  category_consistency.py  exception_logging.py  exceptions.py  exporter.py  features.py  importer.py  logging_config.py  missing_timeslots.py  models.py  paths.py  prompt_manager.py  recurring_backup.py  repository.py  scheduler.py  segment_utils.py  settings.py  time_segments.py
src/wogger_pro/ui/: advanced_export_dialog.py  categories_dialog.py  category_conflict_dialog.py  category_picker.py  csv_import_dialog.py  date_range_dialog.py  entries_model.py  entry_edit_dialog.py  icons.py  jf_loggr_import_dialog.py  main_window.py  manual_entry_dialog.py  missing_timeslot_dialog.py  multi_remainder_dialog.py  prompt_dialog.py  prompt_service.py  qt_message_handler.py  settings_dialog.py  sound_player.py  task_edit_dialog.py  task_inputs.py  task_totals_model.py  theme_manager.py
