[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wogger-pro"
version = "0.1.0"
description = "Wogger Pro desktop work logger"
authors = [{ name = "👑" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "QtAwesome>=1.3",
    "croniter>=2.0",
    "portalocker>=2.8",
]

[project.scripts]
wogger-pro = "wogger_pro.app:main"
